--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ShoppingList</string>
+    <string name="add_new_shop_item">Добавить новый элемент</string>
+    <string name="name_item">Батон</string>
+    <string name="count">1</string>
 </resources>
