--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
     <string name="add_new_shop_item">Добавить новый элемент</string>
     <string name="name_item">Батон</string>
     <string name="count">1</string>
+    <string name="name_hint">Имя:</string>
+    <string name="count_hint">Количество:</string>
+    <string name="save_btn">Сохранить</string>
+    <string name="error_input_name">Ошибка имени</string>
+    <string name="error_input_count">Ошибка количества</string>
 </resources>
